# nlohmann_json_cmake_fetchcontent

./: CMakeLists.txt  README.md  update.py
.github/workflows/: update.yml
cmake/: ci.cmake  config.cmake.in  nlohmann_jsonConfigVersion.cmake.in
test/: CMakeLists.txt
